Added an image in the html file. The image was centered in the css file.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
             <li>Boxing</li>
             <li>UFC</li>
         </ol>
+        <img src="https://cdn.britannica.com/76/124976-050-E03E50CE/Diego-Maradona-1986.jpg">
     </body>
 </html>
